@@ -16,11 +16,14 @@ class EU3Advisor
 {
 	public:
 		EU3Advisor();
-		EU3Advisor(CK2Character*, inverseProvinceMapping&, map<int, EU3Province*>, date);
+		EU3Advisor(Object*, map<int, EU3Province*>&);
+		EU3Advisor(CK2Character*, inverseProvinceMapping&, map<int, EU3Province*>&, date);
 		void	outputInProvince(FILE*);
 		void	outputInActive(FILE*);
 		void	setLocation(int);
+		int	getLocation();
 		date	getDate();
+		date	getDeathDate();
 	private:
 		string	name;
 		int		id;
@@ -32,6 +35,7 @@ class EU3Advisor
 		string	home;
 
 		date		startDate;
+		date		deathDate;
 };
 
 
