@@ -22,7 +22,7 @@ class EU3World
 		void						init(CK2World*);
 		void						convertCountries(countryMapping&);
 		void						convertProvinces(provinceMapping&, map<int, CK2Province*>&, countryMapping&);
-		void						convertAdvisors(inverseProvinceMapping&, CK2World&);
+		void						convertAdvisors(inverseProvinceMapping&, provinceMapping&, CK2World&);
 		void						setupRotwProvinces(provinceMapping&);
 		void						addPotentialCountries();
 		vector<EU3Country*>	getCountries();
