@@ -267,12 +267,6 @@ Object* doParseFile(const char* filename)
 {
 	ifstream	read;				// ifstream for reading files
 
-	/* - when using parser debugging, also ensure that the parser object is non-static!
-	debugme = false;
-	if (string(filename) == "D:\\Victoria 2\\technologies\\commerce_tech.txt")
-		debugme = true;
-	*/
-
 	initParser();
 	Object* obj = getTopLevel();
 	read.open(filename); 
